# wash_scheduler

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml  requirements.txt  visualize_gantt.py
docs/formulation/: static_model.tex
models/: lp_model.py
src/: app.py  main.py  test_scheduler.py  visualize_gantt.py
src/data/: example_data.py
src/models/: entities.py  lp_model.py
